--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
-Hello World@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>10 Equally Spaced Text Areas</title>
+    <style>
+        :root {
+            /* Distance between boxes 1 and 2 */
+            --gap-1-2: 20px;
+            /* Distance between boxes 2 and 3 */
+            --gap-2-3: 20px;
+            /* Distance between boxes 3 and 4 */
+            --gap-3-4: 20px;
+            /* Distance between boxes 4 and 5 */
+            --gap-4-5: 20px;
+            /* Distance between boxes 5 and 6 */
+            --gap-5-6: 20px;
+            /* Distance between boxes 6 and 7 */
+            --gap-6-7: 20px;
+            /* Distance between boxes 7 and 8 */
+            --gap-7-8: 20px;
+            /* Distance between boxes 8 and 9 */
+            --gap-8-9: 20px;
+            /* Distance between boxes 9 and 10 */
+            --gap-9-10: 20px;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        textarea {
+            width: 200px;
+            height: 100px;
+            margin-bottom: var(--gap-1-2);
+        }
+
+        textarea:nth-child(2) {
+            margin-bottom: var(--gap-2-3);
+        }
+
+        textarea:nth-child(3) {
+            margin-bottom: var(--gap-3-4);
+        }
+
+        textarea:nth-child(4) {
+            margin-bottom: var(--gap-4-5);
+        }
+
+        textarea:nth-child(5) {
+            margin-bottom: var(--gap-5-6);
+        }
+
+        textarea:nth-child(6) {
+            margin-bottom: var(--gap-6-7);
+        }
+
+        textarea:nth-child(7) {
+            margin-bottom: var(--gap-7-8);
+        }
+
+        textarea:nth-child(8) {
+            margin-bottom: var(--gap-8-9);
+        }
+
+        textarea:nth-child(9) {
+            margin-bottom: var(--gap-9-10);
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <textarea></textarea>
+        <textarea></textarea>
+        <textarea></textarea>
+        <textarea></textarea>
+        <textarea></textarea>
+        <textarea></textarea>
+        <textarea></textarea>
+        <textarea></textarea>
+        <textarea></textarea>
+        <textarea></textarea>
+    </div>
+</body>
+</html>
