--- a/index.html
+++ b/index.html
@@ -3,108 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>10 Customizable Text Areas</title>
+    <title>10 Customizable Text Areas with Fonts</title>
     <style>
         :root {
             /* Box 1 */
             --width-1: 200px;
             --height-1: 100px;
-            --gap-1-2: 20px;
+            --x-1: 0px;
+            --y-1: 0px;
+            --font-family-1: Arial, sans-serif;
+            --font-size-1: 16px;
 
             /* Box 2 */
             --width-2: 200px;
             --height-2: 100px;
-            --gap-2-3: 20px;
+            --x-2: 0px;
+            --y-2: 120px;
+            --font-family-2: 'Times New Roman', serif;
+            --font-size-2: 18px;
 
             /* Box 3 */
             --width-3: 200px;
             --height-3: 100px;
-            --gap-3-4: 20px;
+            --x-3: 0px;
+            --y-3: 240px;
+            --font-family-3: 'Courier New', monospace;
+            --font-size-3: 14px;
 
             /* Box 4 */
             --width-4: 200px;
             --height-4: 100px;
-            --gap-4-5: 20px;
+            --x-4: 0px;
+            --y-4: 360px;
+            --font-family-4: Georgia, serif;
+            --font-size-4: 20px;
 
             /* Box 5 */
             --width-5: 200px;
             --height-5: 100px;
-            --gap-5-6: 20px;
+            --x-5: 0px;
+            --y-5: 480px;
+            --font-family-5: Verdana, sans-serif;
+            --font-size-5: 15px;
 
             /* Box 6 */
             --width-6: 200px;
             --height-6: 100px;
-            --gap-6-7: 20px;
+            --x-6: 220px;
+            --y-6: 0px;
+            --font-family-6: 'Trebuchet MS', sans-serif;
+            --font-size-6: 17px;
 
             /* Box 7 */
             --width-7: 200px;
             --height-7: 100px;
-            --gap-7-8: 20px;
+            --x-7: 220px;
+            --y-7: 120px;
+            --font-family-7: 'Arial Black', sans-serif;
+            --font-size-7: 19px;
 
             /* Box 8 */
             --width-8: 200px;
             --height-8: 100px;
-            --gap-8-9: 20px;
+            --x-8: 220px;
+            --y-8: 240px;
+            --font-family-8: 'Lucida Console', monospace;
+            --font-size-8: 13px;
 
             /* Box 9 */
             --width-9: 200px;
             --height-9: 100px;
-            --gap-9-10: 20px;
+            --x-9: 220px;
+            --y-9: 360px;
+            --font-family-9: Tahoma, sans-serif;
+            --font-size-9: 16px;
 
             /* Box 10 */
             --width-10: 200px;
             --height-10: 100px;
+            --x-10: 220px;
+            --y-10: 480px;
+            --font-family-10: 'Palatino Linotype', serif;
+            --font-size-10: 18px;
         }
 
         body {
             margin: 0;
             padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            min-height: 100vh;
             box-sizing: border-box;
         }
 
         .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            position: relative;
             width: 100%;
-            max-width: 600px;
+            height: 100vh;
         }
 
         textarea {
+            position: absolute;
             resize: none;
             border: 1px solid #ccc;
             padding: 10px;
             box-sizing: border-box;
         }
 
-        textarea:nth-child(1) { width: var(--width-1); height: var(--height-1); margin-bottom: var(--gap-1-2); }
-        textarea:nth-child(2) { width: var(--width-2); height: var(--height-2); margin-bottom: var(--gap-2-3); }
-        textarea:nth-child(3) { width: var(--width-3); height: var(--height-3); margin-bottom: var(--gap-3-4); }
-        textarea:nth-child(4) { width: var(--width-4); height: var(--height-4); margin-bottom: var(--gap-4-5); }
-        textarea:nth-child(5) { width: var(--width-5); height: var(--height-5); margin-bottom: var(--gap-5-6); }
-        textarea:nth-child(6) { width: var(--width-6); height: var(--height-6); margin-bottom: var(--gap-6-7); }
-        textarea:nth-child(7) { width: var(--width-7); height: var(--height-7); margin-bottom: var(--gap-7-8); }
-        textarea:nth-child(8) { width: var(--width-8); height: var(--height-8); margin-bottom: var(--gap-8-9); }
-        textarea:nth-child(9) { width: var(--width-9); height: var(--height-9); margin-bottom: var(--gap-9-10); }
-        textarea:nth-child(10) { width: var(--width-10); height: var(--height-10); }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <textarea readonly>Text area 1</textarea>
-        <textarea readonly>Text area 2</textarea>
-        <textarea readonly>Text area 3</textarea>
-        <textarea readonly>Text area 4</textarea>
-        <textarea readonly>Text area 5</textarea>
-        <textarea readonly>Text area 6</textarea>
-        <textarea readonly>Text area 7</textarea>
-        <textarea readonly>Text area 8</textarea>
-        <textarea readonly>Text area 9</textarea>
-        <textarea readonly>Text area 10</textarea>
-    </div>
-</body>
-</html>
+        textarea:nth-child(1) { width: var(--width-1); height: var(--height-1); left: var(--x-1); top: var(--y-1); font-family: var(--font-family-1); font-size: var(--font-size-1); }
+        textarea:nth-child(2) { width: var(--width-2); height: var(--height-2); left: var(--x-2); top: var(--y-2); font-family: var(--font-family-2); font-size: var(--font-size-2); }
+        textarea:nth-child(3) { width: var(--width-3); height: var(--height-3); left: var(--x-3); top: var(--y-3); font-family: var(--font-family-3); font-size: var(--font-size-3); }
+        textarea:nth-child(4) { width: var(--width-4); height: var(--height-4); left: var(--x-4); top: var(--y-4); font-family: var(--font-family-4); font-size: var(--font-size-4); }
+        textarea:nth-child(5) { width: var(--width-5); height: var(--height-5); left: var(--x-5); top: var(--y-5); font-family: var(--font-family-5); font-size: var(--font-size-5); }
+        textarea:nth-child(6) { width: var(--width-6); height: var(--height-6); left: var(--x-6); top: var(--y-6); font-family: var(--font-family-6); font-
