index.html Website 4
title, lots of variables

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>10 Customizable Text Areas with Fonts</title>
+    <title>Punjabi Class 2024-2025</title>
     <style>
         :root {
             /* Box 1 */
@@ -112,4 +112,25 @@
         textarea:nth-child(3) { width: var(--width-3); height: var(--height-3); left: var(--x-3); top: var(--y-3); font-family: var(--font-family-3); font-size: var(--font-size-3); }
         textarea:nth-child(4) { width: var(--width-4); height: var(--height-4); left: var(--x-4); top: var(--y-4); font-family: var(--font-family-4); font-size: var(--font-size-4); }
         textarea:nth-child(5) { width: var(--width-5); height: var(--height-5); left: var(--x-5); top: var(--y-5); font-family: var(--font-family-5); font-size: var(--font-size-5); }
-        textarea:nth-child(6) { width: var(--width-6); height: var(--height-6); left: var(--x-6); top: var(--y-6); font-family: var(--font-family-6); font-
+        textarea:nth-child(6) { width: var(--width-6); height: var(--height-6); left: var(--x-6); top: var(--y-6); font-family: var(--font-family-6); font-size: var(--font-size-6); }
+        textarea:nth-child(7) { width: var(--width-7); height: var(--height-7); left: var(--x-7); top: var(--y-7); font-family: var(--font-family-7); font-size: var(--font-size-7); }
+        textarea:nth-child(8) { width: var(--width-8); height: var(--height-8); left: var(--x-8); top: var(--y-8); font-family: var(--font-family-8); font-size: var(--font-size-8); }
+        textarea:nth-child(9) { width: var(--width-9); height: var(--height-9); left: var(--x-9); top: var(--y-9); font-family: var(--font-family-9); font-size: var(--font-size-9); }
+        textarea:nth-child(10) { width: var(--width-10); height: var(--height-10); left: var(--x-10); top: var(--y-10); font-family: var(--font-family-10); font-size: var(--font-size-10); }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <textarea readonly>Text area 1</textarea>
+        <textarea readonly>Text area 2</textarea>
+        <textarea readonly>Text area 3</textarea>
+        <textarea readonly>Text area 4</textarea>
+        <textarea readonly>Text area 5</textarea>
+        <textarea readonly>Text area 6</textarea>
+        <textarea readonly>Text area 7</textarea>
+        <textarea readonly>Text area 8</textarea>
+        <textarea readonly>Text area 9</textarea>
+        <textarea readonly>Text area 10</textarea>
+    </div>
+</body>
+</html>
