index.html New website 3
fixed link (only a link so far)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         :root {
             --font-size: 24px;
-            --box-width: 400px;
+            --box-width: 600px; /* Increased the width to fit the text */
             --box-height: 100px;
             --font-type: Arial, sans-serif;
             --text-color: blue;
@@ -39,6 +39,7 @@
         .text-box a {
             text-decoration: underline;
             color: var(--text-color);
+            white-space: nowrap; /* Prevent text from wrapping */
         }
     </style>
 </head>
