--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Punjabi Class Registration Form</title>
     <style>
         :root {
-            --font-size: 24px;
+            --font-size: 36px; /* Font size for the link text */
+            --info-font-size: 24px; /* Font size for the additional information text */
             --box-width: 600px;
             --font-type: Arial, sans-serif;
             --text-color: blue;
@@ -17,7 +18,7 @@
             margin: 0;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: center;
             background-color: #f5f5f5;
         }
@@ -28,7 +29,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            margin-top: 10%;
+            margin-top: 5%; /* Move the text up */
             font-family: var(--font-type);
             text-align: center;
         }
@@ -41,7 +42,7 @@
         }
 
         .additional-info {
-            font-size: 16px;
+            font-size: var(--info-font-size);
             color: #000000;
             margin-top: 20px;
             max-width: var(--box-width);
