index.html New website 4

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            margin-top: 5%; /* Move the text up */
+            margin-top: 8%; /* Move the text down */
             font-family: var(--font-type);
             text-align: center;
         }
@@ -42,10 +42,10 @@
         }
 
         .additional-info {
+            width: var(--box-width);
             font-size: var(--info-font-size);
             color: #000000;
-            margin-top: 20px;
-            max-width: var(--box-width);
+            margin-top: 30px; /* Move the text down */
             text-align: center;
         }
     </style>
