--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            margin-top: 8%; /* Move the text down */
+            margin-top: 50px; /* Move the text down */
             font-family: var(--font-type);
             text-align: center;
         }
@@ -45,7 +45,7 @@
             width: var(--box-width);
             font-size: var(--info-font-size);
             color: #000000;
-            margin-top: 30px; /* Move the text down */
+            margin-top: 20px;
             text-align: center;
         }
     </style>
