--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         :root {
             --font-size: 36px; /* Font size for the link text */
             --info-font-size: 24px; /* Font size for the additional information text */
-            --box-width: 600px; /* Width for both the link and the additional info */
+            --box-width: 600px;
             --font-type: Arial, sans-serif;
             --text-color: blue;
         }
@@ -18,7 +18,7 @@
             margin: 0;
             display: flex;
             flex-direction: column;
-            justify-content: center; /* Center content vertically */
+            justify-content: flex-start;
             align-items: center;
             background-color: #f5f5f5;
         }
@@ -27,8 +27,9 @@
             width: var(--box-width);
             display: flex;
             flex-direction: column;
+            justify-content: center;
             align-items: center;
-            margin-top: 30px; /* Move the text box down */
+            margin-top: 5%; /* Move the text up */
             font-family: var(--font-type);
             text-align: center;
         }
@@ -38,14 +39,13 @@
             text-decoration: underline;
             color: var(--text-color);
             white-space: nowrap;
-            display: block; /* Ensure link is treated as a block for width */
         }
 
         .additional-info {
-            width: var(--box-width); /* Ensure the additional-info matches the link box width */
             font-size: var(--info-font-size);
             color: #000000;
-            margin-top: 20px; /* Space between the link and the additional information */
+            margin-top: 20px;
+            max-width: var(--box-width);
             text-align: center;
         }
     </style>
