index.html New website 7

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         }
 
         .additional-info {
+            width: var(--box-width); /* Set width to match the box width */
             font-size: var(--info-font-size);
             color: var(--description-color); /* Use variable for description color */
             margin-top: var(--description-margin-top); /* Use variable for margin top */
-            max-width: var(--box-width);
             text-align: center;
         }
     </style>
